--- a/modd.conf
+++ b/modd.conf
@@ -1,8 +1,8 @@
-**/*.go {
+**/*.go !mocks/**/*.go {
   prep: go test -gcflags=-l @dirmods
 }
 
-**/*.go !**/*_test.go {
+**/*.go !**/*_test.go !mocks/**/*.go  {
   prep: go build -o bin/udp-wejay
   daemon +sigterm: ./bin/udp-wejay
 }
