--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 jobs:
   include:
     - stage: test
-      dist: bionic
       language: go
       env: GO111MODULE=on GOFLAGS='-mod vendor'
+      gobuild_args: -gcflags=-l
       go:
         - 1.13.x
-      script:
-        - make tests
 
     - stage: build
       language: minimal
