--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
+dist: bionic
+language: go
+os:
+  - linux
+go:
+  - 1.13.x
+
 jobs:
   include:
     - stage: test
+      dist: bionic
       language: go
       env: GO111MODULE=on GOFLAGS='-mod vendor'
       gobuild_args: -gcflags=-l
