--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,12 @@
 dist: bionic
-language: go
-os:
-  - linux
-go:
-  - 1.13.x
 
 jobs:
   include:
     - stage: test
       dist: bionic
       language: go
-      env: GO111MODULE=on GOFLAGS='-mod vendor'
-      gobuild_args: -gcflags=-l
-      go:
-        - 1.13.x
+      go: "1.13.10"
+      script: go test -gcflags=-l -v ./...
 
     - stage: build
       language: minimal
